<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_ngo"
            android:icon="@drawable/donation"
            android:title="@string/ngo" />
        <item
            android:id="@+id/nav_myProduct"
            android:icon="@drawable/produc"
            android:title="@string/My_Products" />
        <item
            android:id="@+id/nav_myDonation"
            android:icon="@drawable/donation"
            android:title="@string/My_Donations" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile"
            android:title="@string/My_profile" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/logout" />
    </group>
</menu>
