<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:background="@color/colorPrimary"
            android:padding="@dimen/headingpadding"
            android:text="@string/log_in"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/text"
            android:textSize="@dimen/headingpadding" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:padding="@dimen/headingpadding"
                android:textAlignment="center"
                android:textColor="@color/headingclr"
                android:textSize="@dimen/headingbg" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:padding="@dimen/headingpadding"
                android:textAlignment="center"
                android:textColor="@color/headingclr"
                android:textSize="@dimen/headingbg" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/headingpadding"
            android:background="@color/colorPrimary"
            android:padding="@dimen/headingpadding"
            android:text="@string/signin"
            android:textAlignment="center"
            android:textColor="@color/text"
            android:textSize="@dimen/headingpadding" />

        <ProgressBar
            android:id="@+id/Loginprogress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/headingpadding"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:padding="@dimen/headingpadding"
                android:text="@string/signup"
                android:textAlignment="center"
                android:textColor="@color/text"
                android:textSize="@dimen/headingpadding" />

            <TextView
                android:id="@+id/forgetpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/headingpadding"
                android:layout_weight="2"
                android:background="@color/colorPrimary"
                android:padding="@dimen/headingpadding"
                android:text="@string/forget_password"
                android:textAlignment="center"
                android:textColor="@color/text"
                android:textSize="@dimen/headingpadding" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>