<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.EditUserProfile"
    tools:showIn="@layout/activity_edit_user_profile">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:paddingBottom="20dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/firstname"
                android:inputType="textPersonName"
                android:id="@+id/fname"
                android:layout_weight="1"
                android:padding="12dp"
                android:layout_margin="12dp"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lname"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:padding="12dp"
                android:layout_weight="1"
                android:layout_margin="12dp"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:enabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:layout_weight="1"
            android:hint="@string/enter_email"
            android:padding="12dp"
            android:layout_margin="12dp"
            android:inputType="textEmailAddress"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/phoneno"
            android:layout_weight="1"
            android:hint="@string/enter_phone_number"
            android:padding="12dp"
            android:layout_margin="12dp"
            android:inputType="phone"/>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/updatebtn"
            android:layout_weight="1"
            android:textColor="@color/text"
            android:background="@color/colorPrimary"
            android:text="Update"
            android:textSize="22dp"
            android:padding="12dp"
            android:layout_margin="12dp"/>

        <ProgressBar
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:id="@+id/progressbar"/>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>