<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.ForgetPasswordActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_upper">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/forgotten_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:padding="12dp"
                android:text="Forget Password"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/forgotten_pass1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:padding="12dp"
                android:text="@string/forgotten_password"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:hint="@string/enter_email"
                    android:inputType="textEmailAddress"
                    android:padding="12dp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/send"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:background="@color/colorBackground"
                android:padding="12dp"
                android:text="@string/send"
                android:textAlignment="center"
                android:textColor="@color/textcolorWhite"
                android:textSize="22dp" />

            <ProgressBar
                android:id="@+id/forgetpass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
