<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegistrationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_upper">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="17dp"
            android:paddingBottom="17dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/fname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:layout_weight="1"
                    android:hint="@string/firstname"
                    android:inputType="textPersonName"
                    android:padding="12dp"
                    android:textStyle="bold" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/lname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:layout_weight="1"
                    android:hint="@string/last_name"
                    android:inputType="textPersonName"
                    android:padding="12dp"
                    android:textStyle="bold" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:layout_weight="1"
                    android:hint="@string/enter_email"
                    android:inputType="textEmailAddress"
                    android:padding="12dp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/phoneno"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:layout_weight="1"
                        android:hint="@string/enter_phone_number"
                        android:inputType="phone"
                        android:padding="12dp"
                        android:textStyle="bold" />

                </com.google.android.material.textfield.TextInputLayout>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:layout_weight="1"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword"
                    android:padding="12dp"
                    android:textStyle="bold" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/cpass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:layout_weight="1"
                    android:hint="Confirm Password"
                    android:inputType="textPassword"
                    android:padding="12dp"
                    android:textStyle="bold" />


            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/rgstrbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:background="@color/colorBackground"
                android:padding="12dp"
                android:text="signup"
                android:textColor="@color/textcolorWhite"
                android:textSize="22dp"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/signupprogress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:visibility="gone" />

            <TextView
                android:textColor="@color/colorPrimary"
                android:id="@+id/gotologin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="12dp"
                android:text="Already have an account? Go for LOGIN"
                android:textStyle="bold" />
        </LinearLayout>

    </ScrollView>

</RelativeLayout>